--- a/samples.html
+++ b/samples.html
@@ -151,20 +151,24 @@
     <div class="hero-copy">
       <div class="eyebrow">Handpicked from <span class="sr-only">over </span><span id="clientCount" aria-hidden="true">0</span>+ clients</div>
       <h1 class="headline mt-2">Website samples</h1>
-      <p class="sub">A small, curated selection across tutoring, fitness, and local trades. Just a taste of what we’ve launched—ask for industry‑specific examples.</p>
-      <div class="stat-chips mt-2" role="list">
+      <p class="sub">A small, curated selection across tutoring, fitness, and local trades. Just a taste of what we’ve launched.</p>
+      <!-- <div class="stat-chips mt-2" role="list">
         <span class="chip" role="listitem"><span class="dot"></span> Fast 7–14 day launches</span>
         <span class="chip" role="listitem"><span class="dot"></span> Mobile‑first layouts</span>
         <span class="chip" role="listitem"><span class="dot"></span> Ongoing maintenance</span>
-      </div>
+      </div> -->
       <div class="filterbar mt-3" aria-label="Filter examples">
         <button class="filter-btn active" data-filter="all">All</button>
         <button class="filter-btn" data-filter="Education">Education</button>
         <button class="filter-btn" data-filter="Fitness">Fitness</button>
         <button class="filter-btn" data-filter="Home Services">Home Services</button>
       </div>
+
+      <br>
       <div class="btn-row mt-3" style="justify-content:center">
         <a href="consultation.html" class="btn-brand">Book a consult</a>
+        <br>
+    
         <a href="pricing.html" class="btn-ghost">See plans</a>
       </div>
     </div>
