Updates to menu

--- a/faq.html
+++ b/faq.html
@@ -93,9 +93,10 @@
       </button>
       <div id="mobileNav" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto main-nav">
-          <a class="nav-link mr-3" href="/anniversary.html">One Year Anniversary!</a>
+
           <li class="nav-item"><a class="nav-link" href="maintenance.html">Maintenance</a></li>
-          <li class="nav-item"><a class="nav-link" href="pricing.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
           <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
           <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact</a></li>
           <li class="nav-item ml-1"><a class="btn btn-sm btn-nav" href="consultation.html">Get Started</a></li>
