--- a/about.html
+++ b/about.html
@@ -130,10 +130,10 @@
     </button>
     <div class="collapse navbar-collapse" id="nav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="work-with.html">Who We Help</a></li>
         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
         <li class="nav-item"><a class="nav-link" href="/portal">Client Portal</a></li>
-        <li class="nav-item"><a class="nav-link" href="/contact-us.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="/contact-us.html">Contact Us</a></li>
       </ul>
     </div>
   </nav>
