--- a/google-business-management.html
+++ b/google-business-management.html
@@ -121,8 +121,9 @@
 
       <div id="mobileNav" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link" href="pricing.html">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="samples.html">Samples</a></li>
+          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="samples.html">Our Samples</a></li>
           <li class="nav-item"><a class="nav-link" href="help.html">FAQs</a></li>
           <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact</a></li>
           <li class="nav-item ml-1"><a class="btn btn-sm btn-brand" href="consultation.html">Get Started</a></li>
