--- a/help.html
+++ b/help.html
@@ -102,8 +102,10 @@
         </button>
         <div id="mobileNav" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto main-nav">
-            <li class="nav-item"><a class="nav-link" href="pricing.html">Services</a></li>
-            <li class="nav-item"><a class="nav-link" href="samples.html">Samples</a></li>
+            <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="samples.html">Our Portfolio</a></li>
+
             <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
             <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact</a></li>
             <li class="nav-item ml-1"><a class="btn btn-sm btn-nav" href="consultation.html">Get Started</a></li>
