--- a/maintenance.html
+++ b/maintenance.html
@@ -223,7 +223,8 @@
       <div id="mobileNav" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link active" href="maintenance.html">Maintenance</a></li>
-          <li class="nav-item"><a class="nav-link" href="pricing.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
           <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
           <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact</a></li>
           <li class="nav-item ml-1"><a class="btn btn-sm btn-brand" href="consultation.html">Get Started</a></li>
