updates to menu 2
A few more updates to the menu

--- a/terms.html
+++ b/terms.html
@@ -110,9 +110,9 @@
     </button>
     <div class="collapse navbar-collapse" id="nav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="/about">About Us</a></li>
         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
-        <li class="nav-item"><a class="nav-link" href="/samples.html">Samples</a></li>
+        <li class="nav-item"><a class="nav-link" href="/samples.html">Our Samples</a></li>
         <li class="nav-item"><a class="nav-link" href="/portal">Client Portal</a></li>
         <li class="nav-item"><a class="nav-link" href="/contact-us.html">Contact</a></li>
       </ul>
