--- a/about.html
+++ b/about.html
@@ -131,8 +131,8 @@
     <div class="collapse navbar-collapse" id="nav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link" href="work-with.html">Who We Help</a></li>
-        <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
-        <li class="nav-item"><a class="nav-link" href="/portal">Client Portal</a></li>
+        <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+        <li class="nav-item"><a class="nav-link" href="faq.html">FAQs</a></li>
         <li class="nav-item"><a class="nav-link" href="/contact-us.html">Contact Us</a></li>
       </ul>
     </div>
