--- a/accessibility.html
+++ b/accessibility.html
@@ -132,9 +132,9 @@
 
       <div class="collapse navbar-collapse justify-content-end" id="nav">
         <ul class="navbar-nav align-items-lg-center">
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-          <li class="nav-item"><a class="nav-link" href="samples.html">Samples</a></li>
+          <li class="nav-item"><a class="nav-link" href="samples.html">Our Samples</a></li>
           <li class="nav-item"><a class="nav-link" href="portal.html">Client Portal</a></li>
           <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact</a></li>
         </ul>
