--- a/domains.html
+++ b/domains.html
@@ -145,7 +145,8 @@
         <div id="mobileNav" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto main-nav">
             <li class="nav-item"><a class="nav-link" href="maintenance.html">Maintenance</a></li>
-            <li class="nav-item"><a class="nav-link" href="pricing.html">Services</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
             <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
             <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact</a></li>
             <li class="nav-item ml-1">
