--- a/seo.html
+++ b/seo.html
@@ -181,7 +181,8 @@
     <div id="nav" class="collapse navbar-collapse">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link" href="maintenance.html">Maintenance</a></li>
-        <li class="nav-item"><a class="nav-link" href="pricing.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
         <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
         <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact</a></li>
         <li class="nav-item ml-1"><a class="btn btn-sm btn-brand" href="consultation.html">Get Started</a></li>
