--- a/site-map.html
+++ b/site-map.html
@@ -194,6 +194,7 @@
 
           <li><a href="plan-guide.html" target="_blank" rel="noopener"><span>Which WebEaze Plan Fits You?
           </span><span class="arrow">↗</span></a></li>
+          <li ><a href="providers.html" target="_blank" rel="noopener"><span>Providers We Work With</span><span class="arrow">↗</span></a></li>
         </ul>
       </section>
 
