--- a/providers.html
+++ b/providers.html
@@ -148,6 +148,8 @@ footer{background:#7851a9;color:#fff;padding:32px 0;text-align:center;font-size:
   </div>
 </section>
 
+<p class="text-muted mb-3" style="padding: 30px;"><strong>Disclaimer:</strong> The third-party providers mentioned are not owned, operated, or endorsed by WebEaze. All trademarks and pricing references belong to their respective owners, and services are subject to their own terms and policies.</p>
+
 <footer>
   <div class="container container-narrow">
     &copy; <span id="yr"></span> WebEaze. All rights reserved.
