--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
   <div class="container container-narrow faq">
     <h2 class="h4 text-center mb-3" style="font-weight:800">FAQ</h2>
     <details class="reveal"><summary><strong>Which platforms do you support?</strong></summary><div class="pt-2">WordPress, Squarespace, Wix, or clean HTML and CSS. We can also work with your current setup.
-      Learn more on our <a href="prov" style="color:#fff;text-decoration:underline;">Maintenance page</a>.
+     See our <a href="providers.html" style="color:#fff;text-decoration:underline;">list of providers we support</a>.
     </div></details>
     <details class="reveal mt-2"><summary><strong>How long does it take?</strong></summary><div class="pt-2">Usually 1 to 2 weeks depending on content readiness and queue.</div></details>
     <details class="reveal mt-2"><summary><strong>What if I already have a website?</strong></summary><div class="pt-2">We can refresh design, improve speed, and migrate hosting without breaking what works.</div></details>
@@ -578,14 +578,14 @@
 
 <!-- FOOTER -->
 <footer class="py-4 text-center" style="background:var(--brand);color:#fff">
-  <div class="mt-3 small" style="opacity:.9">
+  <!-- <div class="mt-3 small" style="opacity:.9">
     <strong>Serving small businesses across:</strong><br>
     <a href="/web-design-maryland.html" style="color:#fff;text-decoration:underline;">Maryland</a> ·
     <a href="/web-design-delaware.html" style="color:#fff;text-decoration:underline;">Delaware</a> ·
     <a href="/web-design-pennsylvania.html" style="color:#fff;text-decoration:underline;">Pennsylvania</a> ·
     <a href="/web-design-new-jersey.html" style="color:#fff;text-decoration:underline;">New Jersey</a>
     <br><br>
-  </div>
+  </div> -->
   <div class="container container-narrow">
     <div class="mb-1">&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
     <div class="mb-2 small">
