--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
       <div class="col-lg-4 mt-4 mt-lg-0">
         <figure class="surface tilt float">
-          <div style="display:flex;align-items:center;gap:8px;padding:10px 12px;border-bottom:1px solid var(--line);background:linear-gradient(180deg, rgba(255,255,255,.6), rgba(255,255,255,.2)); border-radius: 10px;">
+          <div style="display:flex;align-items:center;gap:8px;padding:10px 12px;border-bottom:1px solid var(--line);background:linear-gradient(180deg, rgba(134, 11, 187, 0.203), rgba(255,255,255,.2)); border-radius: 10px;">
             <span style="width:10px;height:10px;border-radius:50%;background:#ff5f56"></span>
             <span style="width:10px;height:10px;border-radius:50%;background:#ffbd2e"></span>
             <span style="width:10px;height:10px;border-radius:50%;background:#27c93f"></span>
@@ -197,7 +197,7 @@
 <!-- SHOWCASE (light) -->
 <section id="showcase" class="section light" style="padding: 36px 0 36px 0!important">
   <div class="container container-narrow">
-    <h2 class="text-center" style="font-weight:800">Every device. Same polish.</h2>
+    <h2 class="text-center" style="font-weight:800">See it on every device.</h2>
     <div class="devices mt-3">
       <article class="device reveal tilt">
         <span class="chip">Desktop</span>
@@ -366,7 +366,7 @@
           </div>
         </div>
       </div>
-      <div class="btn-row mt-3"><a href="work-with.html" class="btn-brand">Who we serve</a><a href="samples.html" class="btn-ghost">Our Maintenance Commitment
+      <div class="btn-row mt-3"><a href="work-with.html" class="btn-brand">Who we serve</a><a href="maintenance.html" class="btn-ghost">Our Maintenance Commitment
       </a></div>
     </div>
   </div>
@@ -565,8 +565,11 @@
     <div class="surface p-3 p-md-4 reveal d-flex flex-column flex-md-row align-items-md-center justify-content-between">
       <div class="mb-2 mb-md-0">
         <div class="eyebrow" style="color:#6b6f86">Ready to move</div>
-        <h3 class="h5 mb-1" style="font-weight:800">Tell us what you want your website to do</h3>
-        <div class="text-muted">We will map the fastest path and ship a first draft quickly</div>
+        <h3 class="h5 mb-1" style="font-weight:800">Let's get you on the web. Today.
+        </h3>
+        <div class="text-muted">
+          Now that you've seen what we do, let's chat about your goals and how we can help. 
+        </div>
       </div>
       <div class="btn-row">
         <a href="consultation.html" class="btn-brand">Book consultation</a>
