--- a/providers.html
+++ b/providers.html
@@ -150,11 +150,26 @@ footer{background:#7851a9;color:#fff;padding:32px 0;text-align:center;font-size:
 
 <p class="text-muted mb-3" style="padding: 30px;"><strong>Disclaimer:</strong> The third-party providers mentioned are not owned, operated, or endorsed by WebEaze. All trademarks and pricing references belong to their respective owners, and services are subject to their own terms and policies.</p>
 
-<footer>
-  <div class="container container-narrow">
-    &copy; <span id="yr"></span> WebEaze. All rights reserved.
-  </div>
-</footer>
+<!-- FOOTER -->
+<footer class="py-4 text-center" style="background:var(--brand);color:#fff">
+    <div class="mt-3 small" style="opacity:.9">
+      <strong>Serving small businesses across:</strong><br>
+      <a href="/web-design-maryland.html" style="color:#fff;text-decoration:underline;">Maryland</a> ·
+      <a href="/web-design-delaware.html" style="color:#fff;text-decoration:underline;">Delaware</a> ·
+      <a href="/web-design-pennsylvania.html" style="color:#fff;text-decoration:underline;">Pennsylvania</a> ·
+      <a href="/web-design-new-jersey.html" style="color:#fff;text-decoration:underline;">New Jersey</a>
+      <br><br>
+    </div>
+    <div class="container container-narrow">
+      <div class="mb-1">&copy; <span id="yr"></span> WebEaze. All rights reserved.</div>
+      <div class="mb-2 small">
+        <a href="terms.html#privacy" style="color:#fff">Privacy Policy</a> ·
+        <a href="terms.html" style="color:#fff">Terms</a> ·
+        <a href="site-map.html" style="color:#fff">Site Map</a>
+      </div>
+      <div class="small">Made with ☕ in Delaware, USA</div>
+    </div>
+  </footer>
 
 <script>document.getElementById('yr').textContent=new Date().getFullYear();</script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
