--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <div class="row text-left text-md-center">
         <div class="col-md-6 mb-3 mb-md-0">
           <div style="background:rgba(120,81,169,.15);border:1px solid rgba(120,81,169,.4);border-radius:12px;padding:16px;">
-            <div style="font-weight:700;color:#ffd700;font-size:1.8rem;">$169<span style="font-size:1rem;">/mo</span></div>
+            <div style="font-weight:700;color:#ffd700;font-size:1.8rem;">$169-$249<span style="font-size:1rem;">/mo</span></div>
             <div style="color:#fff;opacity:.9;">WebEaze Plan</div>
             <div style="font-size:.9rem;color:rgba(255,255,255,.7);">Unlimited updates, hosting, support</div>
           </div>
