--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </h1>
 
         <p>
-          WebEaze is an affordable, subscription-based web design service that builds, maintains, and grows small-business websites. Without hourly billing or hidden fees.
+          WebEaze is an affordable, subscription-based web design service that builds, maintains, and grows small business websites. Without hourly billing or hidden fees.
         </p>
 
     
